--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Guest-only Kanban board application",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"pnpm:server\" \"pnpm:client\"",
-    "server": "cd apps/server && pnpm run dev",
-    "client": "cd apps/client && pnpm run dev",
-    "db:setup": "cd apps/server && pnpm run db:setup",
-    "cleanup": "cd apps/server && node src/cron/boardCleanup.js",
-    "build": "cd apps/client && pnpm run build"
+    "dev": "concurrently \"pnpm --filter client dev\" \"pnpm --filter server dev\"",
+    "db:setup": "cd apps/server && npx prisma generate && npx prisma migrate deploy",
+    "cleanup": "node apps/server/src/cron/boardCleanup.js",
+    "build": "pnpm --filter client build && pnpm --filter server build"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
-  }
+  },
+  "workspaces": [
+    "apps/*"
+  ]
 }
