--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.545.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@hello-pangea/dnd": "^16.5.0",
-    "framer-motion": "^10.16.4",
-    "axios": "^1.6.0",
+    "react-router-dom": "^7.9.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
